[tool.poetry]
name = "youtokentome"
version = "1.0.6"
description = "Unsupervised text tokenizer focused on computational efficiency"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
cython = "^3.0.2"


[build-system]
requires = ["poetry-core", "Cython"]
build-backend = "poetry.core.masonry.api"
